# wallet-inspector-cli

./: Cargo.toml  README.md
src/: clap.rs  http_reqwest.rs  main.rs  rpc_client.rs  utils.rs
src/mylib/: mod.rs
src/practice/: serde.rs
