[package]
name = "Wallet-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.1.x"
solana-commitment-config = "3.1.1"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
tokio = { version = "1.52.3", features = ["full"] }
